--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,14 @@
 [project]
-name = "labs"
-version = "0.1.0"
-description = "Add your description here"
-requires-python = ">=3.12"
-dependencies = [
-    "pytest>=8.4.2",
-]
+name = "mini-shell"
+version = "1.0.0"
+description = "A mini shell with file commands implementation"
+requires-python = ">=3.8"
+dependencies = []
+
+[build-system]
+requires = ["setuptools>=45", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
